lista dominios funcionando

--- a/src/index.html
+++ b/src/index.html
@@ -13,12 +13,12 @@
     <link rel="shortcut icon" href="./4geeks.ico" />
   </head>
   <body>
-    <div class="container-fluid text-center">
-      <h1 class="mt-5">Escoge tu nombre de Dominio</h1>
-      <p class="alert mt-4">
-        <div id="listaDominios"></div>
-        <button class="btn btn-dark btn-lg" id="boton">Generar Dominios</button>
-      </p>
+    <div class="container-fluid text-center col-6">
+      <h1 class="mt-5 mb-5">Generador de Dominios</h1>
+      <div id="DomainList"></div>
+      <button class="btn btn-dark btn-lg" id="buttonDomain">
+        Generar Dominios
+      </button>
     </div>
   </body>
 </html>
